--- a/modd.conf
+++ b/modd.conf
@@ -4,5 +4,5 @@
 
 **/*.go !**/*_test.go **/*.gohtml {
     prep: go build -o lenslocked .
-    daemon: +sigterm: devd -m ./lenslocked
+    daemon +sigterm: ./lenslocked
 }
